--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,6 +41,14 @@
             "program": "${file}",
             "cwd": "${fileDirname}",
             "port": 9000
-        }
+        },
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Wamp currently open script PHP",
+            "url": "http://localhost/WeatherApp/libs/php/getWeatherInfo.php",
+            "webRoot": "${workspaceFolder}" 
+        },
+
     ]
 }
